# nanotekspice

./: .clang-format  .gitignore  CMakeLists.txt  Graph.hpp  Makefile  README.md  compile_flags.txt  main.cpp
components/: 4071.nts  or.nts
docs/: circuit.uxf  components.uxf  links.uxf  pins.uxf  system.uxf
src/: ComponentManager.cpp  ComponentManager.hpp  Error.cpp  Error.hpp  Graph.hpp  Pin.hpp  State.hpp  Tristate.hpp
src/Pin/: Chip.cpp  Chip.hpp  Circuit.cpp  Circuit.hpp  Link.cpp  Link.hpp  Pin.cpp  Pin.hpp
src/circuit/: Circuit.cpp  Circuit.hpp
src/components/: AComponent.hpp  Board.cpp  Board.hpp  ClockComponent.cpp  ClockComponent.hpp  Component.cpp  Component.hpp  Component4001.cpp  Component4030.cpp  Component4069.cpp  Component4081.cpp  ComponentFactory.cpp  ComponentFactory.hpp  Components.cpp  Components.hpp  GatesComponent.cpp  GatesComponent.hpp  IComponent.hpp  InputComponent.cpp  InputComponent.hpp  SpecialComponent.cpp  SpecialComponent.hpp
src/gates/: Gates.cpp  Gates.hpp
src/parser/: CircuitParser.cpp  CircuitParser.hpp  CommandParser.cpp  CommandParser.hpp  FileParser.cpp  FileParser.hpp
tests/: .gitignore  CMakeLists.txt
